# cubesandbox-swe

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
artifacts/: manifest.json
configs/: README.md
cubesandbox_swe/: __init__.py  artifacts.py  cli.py  codex_agent.py  codex_events.py  cubesandbox_lifecycle.py  cubesandbox_mcp.py  doctor.py  legacy_runner.py  paths.py  records.py  template_ids.py
docs/: architecture.md  artifacts.md  configuration.md  development.md  hint-invariant-eval.md  hint-invariant-full-experiment.md  hint-invariant-onpolicy-experiment.md  hint-sensitivity-capability.md  qwen-cubesandbox-experiment-issues.md  qwen-cubesandbox-next-plan.md  swe-infinite-workflow.md  validation.md
scripts/: analyze_hint_sensitivity_capability.py  check.sh  collect_cubesandbox_codex_swe50.py  cubesandbox-wsl-start.sh  prepare_cubesandbox_swe_templates.py  qwen_responses_namespace_proxy.py  run_affinetes_cubesandbox_swe_e2e.py  run_aliyun_teacher_cross_students.py  run_cubesandbox_codex_swe_e2e.py  run_gpt55_cubesandbox_swe_e2e.py  smoke_cubesandbox_swe_templates.py  targon_qwen36_rental.py  test_swe_infinite_images_50.py  watch_affine_then_qwen32.sh
tests/: test_affinetes_verifier.py  test_artifacts.py  test_cli.py  test_codex_agent.py  test_codex_e2e_config.py  test_codex_events.py  test_collect_swe50.py  test_cubesandbox_lifecycle.py  test_cubesandbox_mcp.py  test_doctor.py  test_hint_eval_candidates.py  test_hint_eval_cli.py  test_hint_eval_cutpoints.py  test_hint_eval_hints.py  test_hint_eval_metrics.py  test_hint_eval_schemas.py  test_hint_eval_scoring.py  test_hint_eval_trajectory.py  test_hint_eval_v2_build_onpolicy.py  test_hint_eval_v2_conclusion_gating.py  test_hint_eval_v2_support.py  (+7 more)
(+33 files in other folders)
